--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "cd test && karma start karma.conf.js"
   },
   "devDependencies": {
-    "angular": "^1.6.0",
+    "angular": "^1.6.1",
     "babel-preset-es2015": "^6.18.0",
     "connect": "^3.5.0",
     "grunt": "^1.0.1",
@@ -25,6 +25,7 @@
     "less": "^2.7.1"
   },
   "dependencies": {
-    "angular-route": "^1.6.0"
+    "angular-route": "^1.6.1",
+    "grunt": "^1.0.1"
   }
 }
