--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "angular": "^1.6.1",
+    "angular-markdown-directive": "^0.3.1",
+    "angular-markdown-editor": "^1.1.1",
+    "angular-sanitize": "^1.6.2",
     "babel-preset-es2015": "^6.18.0",
     "connect": "^3.5.0",
     "grunt": "^1.0.1",
@@ -26,6 +29,7 @@
   },
   "dependencies": {
     "angular-route": "^1.6.1",
-    "grunt": "^1.0.1"
+    "grunt": "^1.0.1",
+    "marked": "^0.3.6"
   }
 }
