--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "npm install && grunt build && grunt test_replace",
     "build_online": "npm install && grunt build && grunt online_replace",
     "test_server": "npm install && grunt connect:prod",
-    "test": "cd test && karma start karma.conf.js"
+    "test": "cd auto_test && karma start karma.conf.js"
   },
   "devDependencies": {
-    "angular": "^1.6.1",
+    "angular": "^1.6.2",
     "angular-markdown-directive": "^0.3.1",
     "angular-markdown-editor": "^1.1.1",
+    "angular-mocks": "^1.6.2",
     "angular-sanitize": "^1.6.2",
     "babel-preset-es2015": "^6.18.0",
     "connect": "^3.5.0",
@@ -25,6 +26,10 @@
     "grunt-contrib-less": "^1.4.0",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "jasmine": "^2.5.3",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.4.1",
+    "karma-jasmine": "^1.1.0",
     "less": "^2.7.1"
   },
   "dependencies": {
